# monitoramento-preco-produtos

./: README.md  pyproject.toml
monitoramentoprecoproduto/: db.sqlite3  manage.py
monitoramentoprecoproduto/accounts/: urls.py  views.py
monitoramentoprecoproduto/accounts/static/accounts/: estilo_pagina_login.css
monitoramentoprecoproduto/accounts/templates/accounts/: login.html
monitoramentoprecoproduto/accounts/view/: home_redirect_view.py  login_view.py  logout_view.py
monitoramentoprecoproduto/monitoramentoprecoproduto/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
monitoramentoprecoproduto/scraper/: admin.py  models.py  scraping.py  urls.py  views.py
monitoramentoprecoproduto/scraper/migrations/: 0001_initial.py  0002_produto_imagem_url_alter_produto_link_and_more.py  0003_produto_fonte.py
monitoramentoprecoproduto/scraper/services/: scraping_buscape.py  scraping_mercado_livre.py
monitoramentoprecoproduto/scraper/static/scraper/: estilo_pagina_busca.css  estilo_pagina_inicial.css  estilo_pagina_resultado_busca.css
monitoramentoprecoproduto/scraper/templates/admin/: base.html
monitoramentoprecoproduto/scraper/templates/scraper/: pagina_inicial.html  pagina_resultado_busca.html
monitoramentoprecoproduto/scraper/view/: pagina_inicial_view.py  pagina_resultado_consulta_view.py  resultado_consulta_view.py
monitoramentoprecoproduto/tests/accounts/: test_views_accounts.py
monitoramentoprecoproduto/tests/scraper/: test_model_scraper.py  test_views_scraper.py
